@@ -1,3 +1,10 @@
+Sun, 30 Mar 2008 10:48:41 +0200 <thp@perli.net>
+Make the Quit buttons actually quit when using the tray icon
+
+	* src/gpodder/gui.py: Patch from Nick L. to make the function of all
+	"Quit" buttons really quit gPodder and only make the window's "X"
+	button act as "minimize to tray" button; Also, update the credits name
+
 Sat, 29 Mar 2008 17:13:26 +0100 <thp@perli.net>
 Project management updates (authors, contributors and copyright)
 
